traces/bug_425.txt
examples++-load/mshmet.cpp:418: error: DEAD_STORE
  The value written to &nbe (type int) is never used.
Showing all 1 steps of the trace


examples++-load/mshmet.cpp:418:3: Write of unused value
416.     int nv=Th3.nv;
417.     int nt=Th3.nt;
418.     int nbe=Th3.nbe;
         ^
419.   
420.    
